# number_place

./: README.md  app.py  pyproject.toml
app/: main.py
app/logic/: sudoku.py
app/pages/: generate.py  generate_random.py  generate_with_hints.py  modify.py  solve.py
pages/: solve_problem.py
